[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usenet-client"
version = "0.1.0"
description = "A modern NNTP/UseNet client for downloading newsgroups"
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pynntp>=1.0.0",
    "dspy-ai>=2.0.0",
    "python-dateutil>=2.8.0",
    "mojentic>=0.1.0",
]
requires-python = ">=3.13"

[project.scripts]
unc = "usenet_client.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/usenet_client"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]